--- a/styles/arkitect.css
+++ b/styles/arkitect.css
@@ -4,3 +4,75 @@
     font-family: 'Open Sans', sans-serif;
 font-family: 'Work Sans', sans-serif;
 }
+header{
+    background-color: rgba(red, green, blue, alpha);
+    padding: 50px 240px;
+
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    color:#131313 ;
+}
+nav >ul{
+    display: flex;
+}
+nav li{
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
+    font-size: 1em;
+}
+nav li a{
+    text-decoration: none;
+    color:#424242;
+}
+.banner-contant{
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+.banner-tittle{
+    font-size: 4rem;
+    font-weight: 700;
+    color:#131313 ;
+}
+.banner-description{
+    color:#424242 ;
+    
+}
+.button-primary{
+    border-radius: 8px;
+    border: none;
+    background:rgba(240, 94, 42, 0.985);
+    color: white;
+    font-size: 1.25rem;
+    font-weight: 600px;
+    padding:20px 25px ;
+    cursor: pointer;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+@media screen and(max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+@media screen and (min-width:576) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
