--- a/styles/arkitect.css
+++ b/styles/arkitect.css
@@ -76,3 +76,31 @@ nav li a{
         flex-direction: column;
     }
 }
+main{
+    max-width: 1440px;
+    margin:0 auto ;
+}
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 25px;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-tittle{
+    font-size: 2.8rem;
+}
+.teams-tittle .Quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+.teams-tittle .text-features{
+    color:rgba(240, 94, 42, 0.985); ;
+    font-weight: 700px;
+}
