--- a/styles/arkitect.css
+++ b/styles/arkitect.css
@@ -14,7 +14,7 @@ nav{
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
+.section-tittle{
     font-size: 2.8rem;
     font-weight: 700;
     color:#131313 ;
@@ -42,7 +42,7 @@ nav li a{
     font-weight: 700;
     color:#131313 ;
 }
-.banner-description{
+.text-light-gry{
     color:#424242 ;
     
 }
@@ -60,25 +60,9 @@ nav li a{
     margin-top: 20px;
     width: 100%;
 }
-@media screen and(max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
-@media screen and (min-width:576) and (max-width:960px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
 main{
     max-width: 1440px;
-    margin:0 auto ;
+    margin:70px auto ;
 }
 .teams-container{
     display: flex;
@@ -103,4 +87,52 @@ main{
 .teams-tittle .text-features{
     color:rgba(240, 94, 42, 0.985); ;
     font-weight: 700px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and(max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    .teams-content{
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns:1fr;
+    }
+    nav{
+        flex-direction: column;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media screen and (min-width:576) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav,   .teams-content{
+        flex-direction: column;
+    }
 }
